Refactor and update post media