@@ -5,9 +5,13 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 import tsajf.tailwindblog.entity.Media;
 import tsajf.tailwindblog.repository.MediaRepository;
+import tsajf.tailwindblog.utils.SecurityUtils;
 
 import java.io.IOException;
+import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.Objects;
 
 
 @Service
@@ -16,20 +20,27 @@ public class MediaService {
     @Autowired
     private MediaRepository mediaRepository;
 
-    @Autowired
-    private UrlService urlService;
-
     public Media save(String name, MultipartFile file) throws IOException {
-        System.out.println(file.getOriginalFilename());
-        Path path = Path.of("upload/" + file.getOriginalFilename());
+        Path directory = Paths.get("upload");
+
+        if (!Files.exists(directory)) {
+            Files.createDirectories(directory);
+        }
+
+        Path path = directory.resolve(Objects.requireNonNull(file.getOriginalFilename()));
         file.transferTo(path);
 
         Media media = new Media();
         media.setName(name);
         media.setPath(String.valueOf(path));
-        media.setUrl(urlService.getBaseUrl(String.valueOf(path)));
+        media.setUrl(SecurityUtils.getBaseUrl(String.valueOf(path)));
 
         return mediaRepository.save(media);
+    }
+
+    public void remove(Media media) throws IOException {
+        Path path = Paths.get(media.getPath());
+        Files.deleteIfExists(path);
     }
 
 
